Align frontend and test pipeline with latest RH contract release
